--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Arapey');
+@import url('https://fonts.googleapis.com/css?family=Poppins');
 
 
 body {
     margin: 0;
     height: 100vh;
     width: 100%;
-    font-family: 'Arapey';
+    font-family: 'Poppins';
 }
 
 section {
@@ -20,8 +20,8 @@ section {
     justify-content: center;
 }
 
-.sticky {
-    background-image: url('rio-background.svg');
+.sticky-anim {
+    background-image: url('/assets/rio-background.svg');
     background-position: bottom left;
     background-size: cover;
     height: 100vh;
@@ -29,7 +29,7 @@ section {
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 2vw;
     text-align: center;
   }
 
